--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,41 +1,1 @@
-.NavBar {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 2vmin;
-  font-size: 2vmin;
-}
-
-.NavBar {
-  a {
-    border-radius: 0.8vmin;
-    padding: 0.5vmin 1.5vmin;
-    text-decoration: none;
-    color: #1a1a1a;
-  }
-
-  a:hover {
-    background-color: #1a1a1a;
-    color: whitesmoke;
-  }
-
-  a.active {
-    background-color: rebeccapurple;
-    color: whitesmoke;
-  }
-
-  span {
-    color: rgb(108, 9, 87);
-  }
-}
-
-.welcome-link {
-  margin-left: 10px;
-  font-weight: 500;
-  color: var(--accent-color, #007bff);
-  text-decoration: none;
-}
-
-.welcome-link:hover {
-  text-decoration: underline;
-}
+/* This file can be deleted as we've converted to Tailwind CSS */
