--- a/frontend/src/pages/App/App.css
+++ b/frontend/src/pages/App/App.css
@@ -1,10 +1,1 @@
-.App {
-  display: grid;
-  grid-template-rows: auto auto;
-}
-
-#main-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+/* This file can be deleted as we've converted to Tailwind CSS */
